syntax = 'proto3';
option java_package= 'com.order_grpc.order_service_grpc.dtos';

message OrderRequest{
  repeated string orderIds=1;
}